<resources>
    <string name="app_name">WeZON</string>

    <string name="app_id">1929532743945599</string>

    <string name="kakao_app_key">fe5e6511d5128ab309edf86c41fe3aad</string>

    <string name="server_client_id">642391102732-se52bl6aqckbslg4c2v8nldd7n6peqvm.apps.googleusercontent.com</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <!-- Bluetooth -->
    <string name="bluetooth_not_enabled">블루투스가 비활성화 되어있습니다.</string>
    <string name="please_enable_bluetooth">블루투스를 켜고 위플을 재시작해주세요.</string>

    <string name="ble_not_supported">BLE 모드를 지원하지 않습니다.</string>
    <string name="error_bluetooth_not_supported">블루투스를 지원하지 않습니다.</string>

    <!-- login -->
    <string name="login_continue">Login</string>
    <string name="login_continue_with_kakao">KakaoTalk</string>
    <string name="login_continue_with_google">Google+</string>
    <string name="login_continue_with_facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="langtudy">랭터디</string>

    <string name="login_terms_of_service">서비스 약관 및 개인정보 보호정책</string>

    <!-- 최초로딩 -->
    <string name="login_noti_01">언제 어디서나 현지인과의 대화를 통해 외국어 실력을 늘려보세요.</string>
    <string name="login_noti_02">내 언어레벨을 높혀줄 다양한 나라의 현지인들을 검색하고, 내가 원하는 시간에 수업을 예약해 보세요.</string>
    <string name="login_noti_03">예약한 시간이 되면 스마트폰, 테블릿, PC에서 실시간 채팅/화상통화로 수업을 진행할 수 있어요.</string>
    <string name="login_noti_04">현지인들은 나의 언어레벨을 어떻게 평가할까요? 현지인들에게 직접받는 평가가 큰 도움이 될수 있어요.</string>

    <string name="network_error_desc">네트워크가 불안정합니다. \n인터넷이 되는 환경인지 확인해 주세요.</string>

    <string name="google_auth_error">구글 인증에 문제가 있습니다. 플레이 스토어를 실행 후 다시 접속해주세요.</string>
    <string name="google_play_not_available">구글 플레이 서비스에 문제가 발생하였습니다.\n 구글 플레이 스토어를 확인해주세요.</string>

    <string name="press_again_to_exit">뒤로 버튼을 한번 더 누르시면 종료 됩니다.</string>

    <!-- 최초로딩 로그인 -->
    <string name="forgot_your_password">비밀번호를 잊으셨나요?</string>
    <string name="login">로그인</string>
    <string name="please_enter_id">아이디를 입력해주세요.</string>

    <string name="sing_up">가입하기</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>

    <string name="code">인증코드</string>
    <string name="next">다음</string>

    <!-- 비밀번호 찾기-->
    <string name="try_again">다시 시도하겠습니다.</string>
    <string name="forgot_password">비밀번호 찾기</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="send">전송</string>
    <string name="we_have_sent_a_push_message">%s님의 메일로 인증코드를 보냈습니다. \n올바른 인증코드를 입력하시면 비밀번호를 재설정하실 수 있습니다.</string>


    <string name="set_new_password_of">%s님의 새 비밀번호를 설정하세요.</string>
    <string name="new_password">새 비밀번호</string>
    <string name="edit">수정</string>
    <string name="change">변경</string>
    <string name="wrong_email_or_password">이메일 또는 비밀번호가 잘못되었습니다. 다시 시도하세요.</string>

    <string name="google_authentication_failure">구글 인증 실패.</string>
    <string name="the_unregistered_email">등록되지 않은 이메일 입니다.</string>
    <string name="the_verification_number_is_incorrect">인증번호가 틀립니다.</string>
    <string name="the_password_change_failed">비밀번호 변경에 실패했습니다. 다시 시도해 주세요. </string>
    <string name="the_email_is_already_used">이미 가입된 이메일 입니다.</string>

    <string name="please_enter_your_code">코드를 입력해주세요.</string>
    <string name="not_the_email_type">이메일 형식이 아닙니다. </string>
    <string name="please_enter_your_password">비밀번호를 입력해주세요.</string>
    <string name="please_enter_your_email">이메일을 입력해주세요.</string>

    <string name="login_with_google">GOOGLE로 로그인</string>
    <string name="login_with_facebook">FACEBOOK으로 로그인</string>

    <string name="not_receive_mail">이메일을 수신하지 못했습니다.</string>


    <string name="password_limit_error">비밀번호를 8자리 이상 입력해주세요.</string>

    <string name="login_confirm_msg">프로필 설정에서 자기소개와 관심사를 추가하면 랭티가 검색할때 좀더 높은 순위에서 검색됩니다.</string>

    <string name="start">시작</string>
    <string name="name">이름</string>

    <string name="please_enter_your_name">이름을 입력해주세요.</string>
    <string name="please_select_your_gender">성별을 선택해주세요.</string>

    <string name="please_enter_your_review">리뷰를 입력해주세요.</string>
    <string name="please_enter_your_board">게시글을 입력해주세요.</string>
    <string name="please_enter_your_wezone">타이틀을 입력해주세요.</string>


    <string name="ok">확인</string>

    <string name="internal_storage">Internal Storage</string>

    <string name="login_pass_notice">%s (으)로 가입된 계정이 없습니다. 신규 가입 절차를 진행합니다.</string>

    <string name="already_on_wezone">WeZON 계정으로 로그인합니다.  </string>

    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="login_find_email">위 이메일로 \"비밀번호 변경\"을 위한 인증번호를 전송합니다.</string>
    <string name="input_email">위 주소로 이메일을 받습니다.</string>

    <string name="cancel">취소</string>

    <string name="terms_of_service">가입정책</string>

    <string name="minutes_ago">%d분전</string>
    <string name="hours_ago">%d시간전</string>
    <string name="days_ago">%d일전</string>
    <string name="months_ago">%d달전</string>

    <!-- 왼쪽메뉴 -->
    <string name="menu_beacon_market">WeCON 마켓</string>
    <string name="menu_people">내 친구</string>
    <string name="menu_set">설정</string>
    <string name="menu_help">고객센터</string>
    <string name="menu_exit_to_app">로그아웃</string>

    <string name="menu_beacon_off"> WeCON 끄기</string>
    <string name="menu_beacon_delete"> WeCON 초기화</string>
    <string name="beacon_off"> 끔</string>
    <string name="beacon_delete"> 초기화</string>

    <!-- 비콘 수정 -->

    <string name="beacon_delete_desc1"> 설정하신 모든 정보가 삭제 됩니다.</string>
    <string name="beacon_delete_desc2"> 초기화 하시겠습니까?.</string>

    <string name="beacon_off_desc1"> WeCON을 끄시겠습니까?</string>
    <string name="beacon_off_desc2"> 설정하신 정보는 유지됩니다.</string>

    <string name="beacon_time_edit_title"> 신호주기 </string>
    <string name="beacon_time_edit_desc"> 1초~10초 사이로 설정해 주세요 </string>
    <string name="beacon_time_second"> 초 </string>


    <!-- 타이틀 -->
    <string name="login_title">로그인</string>
    <string name="sing_up_title">신규 가입</string>

    <string name="theme_manage_title">테마 추가</string>

    <string name="bunnyzone_title">Bunny zone</string>
    <string name="wezone_title">WeZON</string>
    <string name="Location">위치 인식</string>
    <string name="App_start">앱 실행</string>

    <string name="select_beacon_title">WeCON 선택</string>

    <string name="setting_title">설정</string>
    <string name="help_title">지원</string>

    <string name="take_photo">카메라</string>
    <string name="choose_from_library">사진선택</string>


    <string name="review_title">리뷰</string>
    <string name="board_title">게시글</string>
    <string name="input_email_title">이메일 받기</string>

    <string name="sos_title">SOS 설정</string>

    <!--세팅 -->
    <string name="setting_my_info">내 정보 관리</string>
    <string name="setting_account">계정</string>
    <string name="setting_password">비밀번호 변경</string>
    <string name="setting_setting">설정</string>
    <string name="setting_push_noti">푸시 알림</string>
    <string name="setting_beacon_set">WeCON 고급 설정</string>
    <string name="setting_theme">WeZON 앱 테마</string>
    <string name="setting_help">지원</string>
    <string name="setting_report">문제 신고</string>
    <string name="setting_logout">로그아웃</string>

    <string name="setting_beacon_detail">WeCON 고급 설정</string>

    <string name="preview">미리보기</string>
    <string name="done">완료</string>
    <string name="album">앨범</string>
    <string name="remove">삭제</string>

    <string name="leave_ask">탈퇴 하시겠습니까?</string>
    <string name="delete_ask">삭제 하시겠습니까?</string>
    <string name="delete_shared_beacon_ask">해지 하시겠습니까?</string>
    <string name="entry_ask">입장 하시겠습니까?</string>
    <string name="entry_wait_ask">입장 대기 하시겠습니까?</string>
    <string name="delete_ask_message">삭제 하시겠습니까? \n 위존의 모든 회원들의 게시글과 그룹채팅 내용이 모두 삭제 됩니다.</string>

    <string name="deleted_wezone">삭제된 위존입니다.</string>


    <string name="map_update_ask">위존의 위치를 업데이트 하시겠습니까?</string>

    <string name="plz_wait">잠시만 기다려주세요.</string>

    <string name="you_can_not_select_more_than_image">%d장 이상의 이미지는 선택할 수 없습니다.</string>
    <string name="only_1_image_can_be_selected">1장의 이미지만 선택할 수 있습니다.</string>
    <string name="title_activity_app_notification">AppNotification</string>

    <string name="pull_to_refresh_last_data_label">마지막 데이터입니다.</string>
    <string name="pull_to_refresh_pull_label">업데이트 하시려면 당겼다 놓으세요</string>
    <string name="pull_to_refresh_release_label">업데이트 하시려면 당겼다 놓으세요</string>
    <string name="pull_to_refresh_refreshing_label">로딩 중&#8230;</string>

    <!--지원-->
    <string name="setting_my_info_noti">회원님의 Wezone 사용자 이름 및 기기 정보가 자동으로 포함됩니다.</string>

    <!--내 정보관리-->
    <string name="setting_my_info_now_password">현재 비밀번호</string>
    <string name="setting_my_info_new_password_ok">새 비밀번호 확인</string>

    <string name="setting_my_info_password_noti">개인정보 보호를 위해 비밀번호는 주기적 (최소 3개월) 으로 변경해 주세요. 타인에게 비밀번호가 노출되지 않도록 주의해 주세요.</string>
    <string name="setting_my_info_new_password_noti_one">* 8~12자리의 대소문자, 영문, 숫자 이용이 가능</string>
    <string name="setting_my_info_new_password_noti_two">* 동일한 비밀번호로 변경가능합니다.</string>

    <!--SOS-->
    <string name="sos_title_em">긴급 상황 발생시 메세지</string>
    <string name="sos_title_phone">긴급 상황 전화번호 입력</string>
    <string name="sos_inroduce1">미리 설정해 놓은 친구들에게 SMS 알림이 전달 됩니다.</string>
    <string name="sos_inroduce2">*푸쉬 알림은 선택한 디바이스에 Wezone앱이 설치 되어있는 경우에만 해당됩니다.</string>
    <string name="em_phone">긴급 연락처</string>

    <!--공지-->
    <string name="wezone_zone_in_notice">등록된 공지글이 없습니다.</string>
    <string name="wezone_zone_in_notice_desc1"></string>
    <string name="wezone_zone_in_notice_desc2"></string>

</resources>
