<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />


    <LinearLayout
        android:layout_below="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="@string/already_on_wezone"
            android:textColor="#646262"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textview_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/please_enter_your_password"
            android:textColor="#989696"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/edittext_userpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_edittext_states"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#464646"
            android:layout_margin="10dp"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linearlayout_btn_forgotten_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#bababa"
                android:textSize="13sp"
                android:text="@string/forgot_your_password"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_btn_login"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/login_btn_bottom"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>
