<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/dialog_rounded_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/linearlayout_btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_google"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_with_google"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout_btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_facebook"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_with_facebook"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <EditText
            android:id="@+id/edittext_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/white_in_boarder"
            android:hint="@string/email"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edittext_userpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/white_in_boarder"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_noti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_your_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />


            <LinearLayout
                android:id="@+id/linearLayout_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_confirm"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
         
    </LinearLayout>

</LinearLayout>