<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.vinetech.wezone.Setting.SettingPasswordActivity">

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_layout"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textColor="#212121" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_my_info_password_noti" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/activity_setting_now_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/setting_my_info_now_password"
                        android:textColor="#9e9e9e" />

                    <EditText
                        android:id="@+id/write_setting_now_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_setting_now_password"
                        android:background="@drawable/selector_edittext_states"
                        android:hint="현재 비밀번호를 입력해 주세요."
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="#464646"
                        android:textSize="15sp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/activity_setting_new_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/new_password"
                        android:textColor="#9e9e9e" />

                    <EditText
                        android:id="@+id/write_setting_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_setting_new_password"
                        android:background="@drawable/selector_edittext_states"
                        android:hint="새 비밀번호를 입력해 주세요."
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="#464646"
                        android:textSize="15sp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_my_info_new_password_noti_one" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_my_info_new_password_noti_two" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/activity_setting_new_password_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/setting_my_info_new_password_ok"
                        android:textColor="#9e9e9e" />

                    <EditText
                        android:id="@+id/write_setting_new_password_ok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_setting_new_password_ok"
                        android:background="@drawable/selector_edittext_states"
                        android:hint="다시 한번 입력해주세요"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:textColor="#464646"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
