<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_toolbar"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#000000"
        sothree:theme="@style/ActionBar"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/imageview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:src="@drawable/ic_app_tit"
            android:adjustViewBounds="true"/>


    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_toolbar"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/please_enter_your_name"
            android:textColor="#989696"
            android:textStyle="bold"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_interest"
            android:maxLines="1"
            android:hint="@string/name"
            android:maxLength="10"
            android:padding="10dp"
            android:textColor="#464646"
            android:layout_margin="10dp"
            android:inputType="textNoSuggestions"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_btn_next"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/login_btn_bottom"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>
